Fixed servicecard overflow

--- a/src/App.css
+++ b/src/App.css
@@ -198,7 +198,7 @@ body {
 }
 
 .ServiceGrid.mobile {
-  gap: 50px;
+  gap: 30px;
   grid-gap: 50px;
 }
 
@@ -217,7 +217,8 @@ body {
 }
 .ServiceGrid.mobile .ServiceContent {
   padding-top: 50px !important;
-  padding-bottom: 0px !important;
+  height: calc(100% - 50px);
+  padding-bottom: 50px !important;
 }
 .ServiceGrid .centeredIcon {
   display: -webkit-box;
@@ -307,8 +308,9 @@ body {
   margin: auto;
   margin-top: 50px;
   padding-top: 100px;
+  padding-bottom: 100px;
   width: 100%;
-  height: 100%;
+  height: calc(100% - 100px);
   background-color: white;
   -webkit-box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 12px 0px;
   -moz-box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 12px 0px;
